@@ -1,3 +1,8 @@
+2003-05-29  Tobias <ibotty@web.de>
+
+	* Source/RIGSCore.m (class_getNextMethodList): Rename from
+	class_nextMethodList (old name causes a syntax error?).
+
 2003-05-26  Adam Fedor  <fedor@gnu.org>
 
 	* Examples/Gui/CurrencyConverter/CurrencyConverter.rb
